--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --background-color: #044965;
     --primary-color: #05668d;
     --font-color: white;
+    --heading-color: #060606;
     --secondary-font-color: rgba(226, 232, 240, 1);
     --box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   }
@@ -28,6 +29,7 @@
     background-color: transparent;
     cursor: pointer;
     font-size: 1em;
+    color: #ffffff;
   }
   :root:not(.light) .theme-icon .sun {
     display: none;
@@ -36,7 +38,7 @@
   :root:not(.light) .theme-icon .moon {
     display: inline-block;
   }
-  
+
   :root.light .theme-icon .sun {
     display: inline-block;
   }
@@ -51,13 +53,13 @@
     overflow: hidden;
   }
 body {
-    padding: 25px;
+    padding: 0;
     background-color: white;
     color: #222222;
     font-size: 25px;
   }
   
-  .dark-mode {
+.dark-mode {
     background-color: #222222;
     color: white;
   }
@@ -173,19 +175,23 @@ header {
     font-weight: 600;
     font-family: 'Times New Roman', Times, serif;
 }
+.nav-fixed .site-header .text{
+    color: var(--font-color);
+}
 
 /* -----Light And Dark----- */
 .nav-fixed {
-    background-color: #ffffff;
+    background-color: var(--font-color);
     padding: 0px;
     height: 70px;
     border-bottom: none;
     box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
     z-index: 99 !important;
+    color: var(--heading-color);
 }
 
 .nav-fixed .fa-bars {
-    color: #000000;
+    color: var(--heading-color);
 }
 
 .nav-fixed ul#submenu {
@@ -197,7 +203,7 @@ header {
 }
 
 .nav-fixed .navbar-brand {
-    color: #000000;
+    color: var(--heading-color);
 }
 
 .dark-mode-bg .nav-fixed .navbar-brand {
@@ -289,9 +295,10 @@ a.navbar-brand:hover {
     margin-left: 20px;
     color: #ffffff;
 }
-.mode-container:hover{
+.sun:hover,.moon:hover, .mode-container:hover   {
     color:#fb811e;
 }
+
 .moon {
     display: block;
     cursor: pointer;
@@ -308,10 +315,6 @@ a.navbar-brand:hover {
     color: #ffffff;
 }
 
-/* .mode-container:hover {
-    color: #fb811e;
-} */
-
 .moon::after {
     content: "";
     position: absolute;
@@ -326,6 +329,7 @@ a.navbar-brand:hover {
     border-radius: 50%;
     color: #ffffff;
 }
+
 .sun{
     /* display: block;
     cursor: pointer;
@@ -492,32 +496,51 @@ nav ul li a:hover {
 
 .carousel .container-fluid {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
 
 .carousel .banner-left {
     padding: 0;
-    padding-top: 120px;
+    /* padding-top: 120px; */
     /* left: 10em; */
-    padding-left: 50px;
-
+    position: absolute;
+    left: 10em;
+    top: -10em;
+    width: 100%;
+    z-index: 1;
+    /* padding-left: 50px; */
 }
 
 .carousel .content {
-    margin-left: 15px;
     position: relative;
 }
 
+#owl-carousel{
+    position: initial;
+}
+.owl-theme .owl-nav{
+    display: none;
+}
+.owl-theme .owl-dots{
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    transform: translateY(-50%);
+    color: #fb811e;
+}
+.owl-theme .owl-dots .owl-dot.active span{
+    background-color: #fb811e;
+}
+.owl-theme .owl-dots .owl-dot span{
+    background-color: #ffffff;
+}
 .carousel .banner-left h2 {
     color: #f4f4f4;
     font-size: 100px;
     font-weight: bold;
     margin: -0.5em;
-    margin-top: -1.2em;
-    padding-left: 50px;
+    /* margin-top: -1.2em; */
     padding-bottom: 30px;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -526,6 +549,7 @@ nav ul li a:hover {
     font-size: 50px;
     line-height: 60px;
     font-weight: bolder;
+    margin: 0 -2em;
     color: #060606;
     padding-left: 30px;
     font-family: 'Times New Roman', Times, serif;
@@ -533,7 +557,8 @@ nav ul li a:hover {
 
 .carousel .banner-left p {
     font-size: 20px;
-    padding-left: 30px;
+    /* padding-left: 30px; */
+    margin-left: -60px;
 }
 
 .carousel .banner-right .radio {
@@ -545,8 +570,13 @@ nav ul li a:hover {
     font-size: 1rem;
     line-height: 1.5;
 }
-
+[type="checkbox"],
+[type="radio"] {
+    box-sizing: border-box;
+    padding: 0;
+}
 .carousel .banner-right .image {
+    position: relative;
     overflow: hidden;
     top: 0;
     bottom: 0;
@@ -614,11 +644,13 @@ nav ul li a:hover {
 
 .carousel .banner-right h4 {
     color: #ffffff;
+    margin-bottom: 0;
 }
 
 .carousel .banner-right span {
     font-family: "Source Sans Pro", sans-serif;
     color: #ffffff;
+
 }
 
 .carousel .banner-right p {
@@ -726,7 +758,7 @@ nav ul li a:hover {
 
 .grow-item a {
     text-decoration: none;
-    color: #000000;
+    color: var(--background-color);
     font-weight: 700;
     transition: all 0.75s;
 }
@@ -782,6 +814,7 @@ nav ul li a:hover {
     font-size: 1.25rem;
     font-weight: 300;
     color: #ffffff;
+    margin-top: 20px;
 }
 
 .service-item p.btn {
@@ -810,10 +843,13 @@ nav ul li a:hover {
 
 .service-item .card-body a {
     text-decoration: none;
-    color: #000000;
+    color: var(--heading-color);
     font-weight: 650;
-    font-size: 30px;
+    font-size: 26px;
     transition: all 0.5s;
+}
+.service-item .card{
+    background: var(--font-color);
 }
 
 .service-item .card-body a:hover {
